--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
 
      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
-    </button>
+      </button>
 
       <div class="collapse navbar-collapse justify-content-between" id="navbarNav">       
         <ul class="navbar-nav">
@@ -23,18 +23,12 @@
           </li>
         </ul>
 
-        <ul class="navbar-nav">
+<!--         <ul class="navbar-nav">
           <li class="nav-item"><a class="nav-link" href="">Canvas</a></li>
           <li class="nav-item"><a class="nav-link" href="">Slack</a></li>
         </ul>   
-
+ -->
       </div>
-
-      <!-- <div class="collapse navbar-collapse" id="navbarNav">        -->
-
-
-      <!-- </div> -->
-
     </div>     
   </div>
 </div> 
