--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -23,11 +23,11 @@
           </li>
         </ul>
 
-<!--         <ul class="navbar-nav">
-          <li class="nav-item"><a class="nav-link" href="">Canvas</a></li>
-          <li class="nav-item"><a class="nav-link" href="">Slack</a></li>
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link" href="https://usfca.instructure.com/courses/1601365">Canvas</a></li>
+          <li class="nav-item"><a class="nav-link" href="https://cs601-f21.slack.com/">Slack</a></li>
         </ul>   
- -->
+
       </div>
     </div>     
   </div>
